# Introduction-to-MCP

./: .env  .gitignore  100_Capabilities_TODO.md  BRAINTRUST_SETUP.md  CONTRIBUTING.md  DEMO_DAY_10_PHASES_50_TASKS.md  DEMO_DAY_RUNBOOK.md  Dockerfile  EXECUTION_20_TASKS.md  EXECUTION_20_TASKS_DEV2_DEV3.md  EXECUTION_20_TASKS_DEV2_DEV3_CYCLE2.md  EXECUTION_20_TASKS_DEV2_DEV3_LEAD_PHASE.md  EXECUTION_20_TASKS_DEV2_DEV3_LEAD_PHASE_CYCLE2.md  EXECUTION_20_TASKS_LEAD_DEV2.md  EXECUTION_20_TASKS_PHASE6_PLUS.md  KopanoContext.spec  ORCH_USER_GUIDE.md  README.md  RELEASE.md  SECURITY.md  demo_go_no_go.py  index.md  main.py  main.spec  package-lock.json  package.json  pyproject.toml  pytest.ini
.CLI_Project/: pyvenv.cfg
.CLI_Project/Scripts/: activate  activate.bat
.azure/: deployment-plan.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy.yml
.orch_data/: schematics_audit.csv
.orch_data/dev_watch/: dev2_activity.jsonl  dev3_activity.jsonl  dev3_communications.jsonl
.orch_data/mcp_server/: document_mcp_activity.jsonl
.orch_data/session_logs/: codex_session_2026-04-06.md  session_rules.md
CLI/: .gitignore  README.md  main.py  main.spec  mcp_client.py  mcp_server.py  pyproject.toml
Schematics/: # orch – WhatsApp Integration Guide.txt  2026-04-08.md  CLAUDE.md  Project Status and Capabilities.docx  Where we are 2026-04-03.docx  index.md  project-Status-and-Capabilities.md  schema.sql  ~$oject Status and Capabilities.docx
Schematics/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  index.md  workspace.json  workspaces.json
Skimatics/: 'orch' CLI Specification.txt  Capabilities_Roadmap.md  Implementation Plan.txt  filesystem.py  search.py  write_file.py  🏛️ The Neural Link Patch.txt
audit_logs/: execution.jsonl  reasoning.jsonl
db/: datalake.db
infra/: DEPLOY_GUIDE.md  main.bicep
kopano-core/: .env.example  __init__.py  datalake.py  debug_gemini.py  migrate_db.py  pyproject.toml
kopano-core/db/: datalake.db
kopano-core/kopano/: __init__.py  api.py  braintrust.py  bridge.py  cli.py  config.py  cowork.py  database.py  kasilink_api.py  labs_api.py  labs_registry.py  launch_config.py  llm.py  logging.py  mcp_console.py  memory.py  microsoft_readiness.py  orch_code.py  orchestration.py  simulator.py  telemetry.py  tool_runtime.py
kopano-core/kopano/tools/: filesystem.py  gig_matcher.py  github_tool.py  loadshedding.py  search.py  sentiment_analyzer.py  web_scraper.py  write_file.py
kopano-core/studio/: index.html  package-lock.json
kopano-core/studio/src/: App.css  App.tsx  index.css  telemetry.ts  types.ts
kopano-core/studio/src/components/: AppTopNav.tsx
kopano-core/studio/src/pages/: AdminPage.tsx  ConsolePage.tsx  CouncilPage.tsx  ForgePage.tsx  LabsPage.tsx
kopano-core/tools/: filesystem.py  write_file.py
orch/: .env  .env.example  .gitignore  README.md  __main__.py  debug_keys.py  orchestration.py  pyproject.toml  requirements.txt
orch/.orch_data/: agents.json  orch.db
orch/gui/: .env.example  package-lock.json  package.json
orch/gui/src/: App.css  App.tsx  labsUi.ts  main.tsx
orch/gui/src/components/: AnimatedBackdrop.tsx  AppTopNav.tsx
orch/gui/src/pages/: AdminPage.tsx  ConsolePage.tsx  CouncilPage.tsx  ForgePage.tsx  LabsPage.tsx
orch/gui/tests/: labs-ui-smoke.mjs
orch/orch/: agent_manager.py  api.py  bridge.py  cli.py  config.py  context.py  cowork.py  database.py  datalake.py  dev_watch.py  exporter.py  kasilink_api.py  labs_api.py  labs_registry.py  language_runtime.py  launch_config.py  llm.py  logging.py  mcp_console.py  memory.py  microsoft_readiness.py  moderator.py  orch_code.py  orchestration.py  sa_access.py  simulator.py  telemetry.py  tool_runtime.py
orch/orch/tools/: __init__.py  ab_tester.py  anomaly_detector.py  arxiv.py  code_execution.py  data_comparator.py  database_tool.py  filesystem.py  forecaster.py  gig_matcher.py  git.py  github_tool.py  loadshedding.py  log_analyzer.py  report_generator.py  search.py  security.py  social_monitor.py  spreadsheet_tool.py  viz_tool.py
orch/tools/: __init__.py
scripts/: append_session_8.py  check_atlas.py  demo_day_launch.ps1  demo_day_preflight.ps1  demo_day_readiness.py  demo_day_smoke.py  reformat_log.py  update_nicknames.py
src/: __init__.py
tests/: test_arxiv_tool.py  test_cli.py  test_cli_runtime.py  test_database_tool.py  test_datalake.py  test_demo_day_assets.py  test_git_tool.py  test_kasilink_phase4.py  test_labs_api.py  test_log_analyzer.py  test_moderator.py  test_module_entrypoint.py  test_orch_logging.py  test_orchestration.py  test_project_metadata.py  test_report_generator.py  test_security_tool.py  test_simulator.py  test_social_monitor.py  test_spreadsheet_tool.py  test_tools.py  test_viz_tool.py  test_web_scraper.py
(+777 files in other folders)
