[project]
name = "kopano-context"
version = "0.1.0"
description = "Kopano Context — Multi-Agent Orchestration Framework. Official reference implementation for the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "uvicorn>=0.22.0",
    "fastapi>=0.100.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "nltk>=3.8.0",
    "matplotlib>=3.7.0",
    "beautifulsoup4>=4.12.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "PyGithub>=2.1.1",
]

[project.scripts]
# Primary Kopano CLI entry point
kopano = "orch.orch.cli:app"
# Legacy alias — kept for backwards compatibility during transition
orch = "orch.orch.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["orch*"]
