[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-cli"
version = "0.1.0"
dependencies = [
    "python-dotenv",
    "mcp",
    "pydantic",
    "pyinstaller",
    "anthropic",
    "prompt_toolkit",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-cli = "main:cli_entry"
