[project]
name = "orch"
version = "0.1.0"
description = "Multi-AI Collaboration Platform CLI (MCP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic-settings>=2",
    "python-dotenv>=1",
    "litellm>=1.40",
    "sqlalchemy>=2.0",
    "google-generativeai>=0.8.0",
    "openai>=1.55.0",
]

[project.scripts]
orch = "orch.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orch"
version = "0.1.0"
description = "ORCH apprentice AI orchestration"
authors = [{ name = "Kholofelo" }]
dependencies = []

[tool.setuptools]
packages = ["orch"]

